Updated with test results

--- a/Misc Data Structures.ipynb
+++ b/Misc Data Structures.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,9 +118,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===============\n",
+      "[10]\n",
+      " | \n",
+      "[8]\n",
+      " | \n",
+      "[6]\n",
+      " | \n",
+      "[4]\n",
+      " | \n",
+      "[2]\n",
+      " | \n",
+      "[start]\n",
+      "===============\n"
+     ]
+    }
+   ],
    "source": [
     "s=Stack('start',name='TestStack')\n",
     "for i in range(2,12,2):\n",
@@ -130,9 +150,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===============\n",
+      "[6]\n",
+      " | \n",
+      "[4]\n",
+      " | \n",
+      "[2]\n",
+      " | \n",
+      "[start]\n",
+      "===============\n"
+     ]
+    }
+   ],
    "source": [
     "s.pop()\n",
     "s.pop()\n",
@@ -141,11 +177,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===============\n",
+      "[start]\n",
+      "===============\n",
+      "===============\n",
+      "[2]\n",
+      " | \n",
+      "[start]\n",
+      "===============\n",
+      "===============\n",
+      "[4]\n",
+      " | \n",
+      "[2]\n",
+      " | \n",
+      "[start]\n",
+      "===============\n",
+      "===============\n",
+      "[6]\n",
+      " | \n",
+      "[4]\n",
+      " | \n",
+      "[2]\n",
+      " | \n",
+      "[start]\n",
+      "===============\n",
+      "===============\n",
+      "[8]\n",
+      " | \n",
+      "[6]\n",
+      " | \n",
+      "[4]\n",
+      " | \n",
+      "[2]\n",
+      " | \n",
+      "[start]\n",
+      "===============\n",
+      "===============\n",
+      "[10]\n",
+      " | \n",
+      "[8]\n",
+      " | \n",
+      "[6]\n",
+      " | \n",
+      "[4]\n",
+      " | \n",
+      "[2]\n",
+      " | \n",
+      "[start]\n",
+      "===============\n",
+      "===============\n",
+      "[8]\n",
+      " | \n",
+      "[6]\n",
+      " | \n",
+      "[4]\n",
+      " | \n",
+      "[2]\n",
+      " | \n",
+      "[start]\n",
+      "===============\n",
+      "===============\n",
+      "[6]\n",
+      " | \n",
+      "[4]\n",
+      " | \n",
+      "[2]\n",
+      " | \n",
+      "[start]\n",
+      "===============\n",
+      "===============\n",
+      "[4]\n",
+      " | \n",
+      "[2]\n",
+      " | \n",
+      "[start]\n",
+      "===============\n",
+      "===============\n",
+      "[100]\n",
+      " | \n",
+      "[4]\n",
+      " | \n",
+      "[2]\n",
+      " | \n",
+      "[start]\n",
+      "===============\n",
+      "===============\n",
+      "[2]\n",
+      " | \n",
+      "[start]\n",
+      "===============\n",
+      "===============\n",
+      "[7]\n",
+      " | \n",
+      "[5]\n",
+      " | \n",
+      "[3]\n",
+      " | \n",
+      "[2]\n",
+      " | \n",
+      "[start]\n",
+      "===============\n",
+      "===============\n",
+      "[7]\n",
+      " | \n",
+      "[5]\n",
+      " | \n",
+      "[3]\n",
+      " | \n",
+      "[2]\n",
+      " | \n",
+      "[start]\n",
+      "===============\n"
+     ]
+    }
+   ],
    "source": [
     "s=Stack('start',name='TestStack')\n",
     "s.draw()\n",
@@ -174,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,63 +440,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Queue at 0x165b0b74240>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2]-[3]-[6]\n"
+     ]
+    }
+   ],
    "source": [
     "q.draw()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 enqueued\n"
+     ]
+    }
+   ],
    "source": [
     "q.enqueue(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2]-[3]-[6]-[10]\n"
+     ]
+    }
+   ],
    "source": [
     "q.draw()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 dequeued\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q.dequeue()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No value supplied, nothing was enqueued.\n"
+     ]
+    }
+   ],
    "source": [
     "q.enqueue()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 enqueued\n",
+      "101 enqueued\n",
+      "102 enqueued\n",
+      "103 enqueued\n",
+      "[3]-[6]-[10]-[100]-[101]-[102]-[103]\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(100,104):\n",
     "    q.enqueue(i)\n",
@@ -351,21 +578,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 dequeued\n",
+      "6 dequeued\n",
+      "10 dequeued\n",
+      "[100]-[101]-[102]-[103]\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(100,103):\n",
     "    q.dequeue()\n",
     "q.draw()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -376,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,16 +654,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Node at 0x1658c0b9198>"
+       "<__main__.Node at 0x165b0b61048>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +709,7 @@
        "6"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -514,20 +745,6 @@
    "source": [
     "bst.PrintTree()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
