--- a/Data Structures/LinkedList.ipynb
+++ b/Data Structures/LinkedList.ipynb
@@ -517,7 +517,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Node at 0x19a8c0a3c50>"
+       "<__main__.Node at 0x12ad02d4be0>"
       ]
      },
      "execution_count": 30,
@@ -570,6 +570,255 @@
    ],
    "source": [
     "l4.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A few more - `delete_tail`, `length`, `is_Empty`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LinkedList(object):\n",
+    "    \n",
+    "    def __init__(self, head=None):\n",
+    "        self.head = head\n",
+    "    \n",
+    "    def append(self, new_node):\n",
+    "        \"\"\"\n",
+    "        Appends a new node at the end\n",
+    "        \"\"\"\n",
+    "        current = self.head\n",
+    "        if self.head:\n",
+    "            while current.next:\n",
+    "                current = current.next\n",
+    "            current.next = new_node\n",
+    "        else:\n",
+    "            self.head = new_node\n",
+    "    \n",
+    "    def show(self):\n",
+    "        \"\"\"\n",
+    "        Shows (prints) a linked list\n",
+    "        \"\"\"\n",
+    "        print('[',end='')\n",
+    "        current = self.head\n",
+    "        if self.head:\n",
+    "            if current.next:\n",
+    "                print(self.head.value,end=', ')\n",
+    "            else:\n",
+    "                print(self.head.value,end='')\n",
+    "        while current.next:\n",
+    "            current = current.next\n",
+    "            if current.next:\n",
+    "                print(current.value,end=', ')\n",
+    "            else:\n",
+    "                print(current.value,end='')\n",
+    "        print(']')\n",
+    "        \n",
+    "    def insert_first(self, new_node):\n",
+    "        \"\"\"\n",
+    "        Inserts a new node at the beginning\n",
+    "        \"\"\"\n",
+    "        new_node.next = self.head\n",
+    "        self.head = new_node\n",
+    "\n",
+    "    def delete_first(self):\n",
+    "        \"\"\"\n",
+    "        Deletes a node from the beginning\n",
+    "        \"\"\"\n",
+    "        if self.head:\n",
+    "            deleted_element = self.head\n",
+    "            temp = deleted_element.next\n",
+    "            self.head = temp\n",
+    "            return deleted_element\n",
+    "        else:\n",
+    "            return None\n",
+    "    \n",
+    "    def delete_tail(self):\n",
+    "        temp = self.head\n",
+    "        if self.head != None:\n",
+    "            if self.head.next is None:  # if Head is the only Node in the Linked List\n",
+    "                self.head = None\n",
+    "            else:\n",
+    "                while temp.next.next is not None:  # find the 2nd last element\n",
+    "                    temp = temp.next\n",
+    "                temp.next, temp = (\n",
+    "                    None,\n",
+    "                    temp.next,\n",
+    "                )  # (2nd last element).next = None and temp = last element\n",
+    "        return temp\n",
+    "    \n",
+    "    def isEmpty(self):\n",
+    "        \"\"\"\n",
+    "        Returns a Boolean whether the list is empty\n",
+    "        \"\"\"\n",
+    "        return self.head is None  # Return if Head is none\n",
+    "    \n",
+    "    def length(self):\n",
+    "        \"\"\"\n",
+    "        Returns the length of the list\n",
+    "        \"\"\"\n",
+    "        ln = 0\n",
+    "        if not self.isEmpty():\n",
+    "            ln+=1\n",
+    "        current = self.head\n",
+    "        if self.head:\n",
+    "            while current.next:\n",
+    "                current = current.next\n",
+    "                ln+=1\n",
+    "        return ln"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l5 = LinkedList(Node(10))\n",
+    "l5.append(Node(20))\n",
+    "l5.append(Node(30))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l5.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l5.length()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Node at 0x12ad02d97f0>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l5.delete_tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l5.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l5.length()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Node at 0x12ad02d9630>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l5.delete_tail()\n",
+    "l5.delete_first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l5.isEmpty()"
    ]
   }
  ],
